--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,900&family=Inter:wght@300;400;500;700;900&display=swap");
 html, body {
   font-family: "Inter", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .btn-yellow {
@@ -218,6 +220,35 @@ html, body {
   text-decoration: underline;
 }
 
+.btn-send-pg-2 {
+  background-color: #F9D783;
+  border: solid 1px #F9D783;
+  color: #191919;
+  padding: 10px 25px;
+  font-weight: 600;
+  border-radius: 25px;
+  font-size: 16px;
+  font-family: "Inter";
+  font-weight: normal;
+  width: 100%;
+  margin-bottom: 50px;
+  margin-top: 20px;
+}
+.btn-send-pg-2 i {
+  margin-left: 5px;
+  font-size: 1em;
+  opacity: 1;
+}
+.btn-send-pg-2:hover {
+  background-color: #191919;
+  border: 1px solid white;
+  color: white;
+  text-decoration: none;
+}
+.btn-send-pg-2:hover span {
+  text-decoration: underline;
+}
+
 header {
   background-color: #F0EFE9;
   display: flex;
@@ -326,7 +357,9 @@ header .container .btn-login {
 
 .showcase {
   background-color: #F0EFE9;
-  position: relative;
+  background-image: url(/IMG/Stripes/bg-connect.svg);
+  background-repeat: no-repeat;
+  background-position: bottom left;
 }
 .showcase .container {
   display: flex;
@@ -669,7 +702,9 @@ header .container .btn-login {
   display: flex;
   align-content: center;
   background-color: #F0EFE9;
-  position: relative;
+  background-image: url(/IMG/Stripes/bg-our-services.svg);
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 .companyServices .container .content-header {
   padding-top: 120px;
@@ -849,7 +884,7 @@ header .container .btn-login {
   letter-spacing: -10px;
   color: rgba(25, 25, 25, 0.7);
 }
-.whyChooseUs .rightSection {
+.whyChooseUs .container .rightSection {
   width: 100%;
   height: auto;
   position: relative;
@@ -858,12 +893,12 @@ header .container .btn-login {
   align-items: start;
 }
 @media (max-width: 992px) {
-  .whyChooseUs .rightSection {
+  .whyChooseUs .container .rightSection {
     width: 75%;
     height: auto;
   }
 }
-.whyChooseUs .rightSection img {
+.whyChooseUs .container .rightSection img {
   position: absolute;
   left: 10%; /* Adjust the left property to move the image to the right */
   top: 3%;
@@ -871,7 +906,7 @@ header .container .btn-login {
   height: auto;
 }
 @media (max-width: 1200px) {
-  .whyChooseUs .rightSection img {
+  .whyChooseUs .container .rightSection img {
     width: 80%;
     height: auto;
     position: static;
@@ -882,45 +917,40 @@ header .container .btn-login {
   }
 }
 @media (max-width: 776px) {
-  .whyChooseUs .rightSection img {
-    width: 80%;
+  .whyChooseUs .container .rightSection img {
+    width: 100%;
     height: auto;
-    position: static;
     padding-left: 40px;
     margin-bottom: 40px;
-    position: relative;
   }
 }
-.whyChooseUs .rightSection .blueBox {
+.whyChooseUs .container .rightSection .blueBox {
   position: absolute;
   top: 32%;
   background-color: #F0EFE9;
   z-index: -1; /* Set a negative z-index to place it behind the image */
-  width: 884px;
+  width: 784px;
   height: 398px;
 }
 @media (max-width: 1200px) {
-  .whyChooseUs .rightSection .blueBox {
+  .whyChooseUs .container .rightSection .blueBox {
     position: absolute;
     margin-left: 10px;
     height: 258px;
-    width: 664px;
-  }
-}
-@media (max-width: 776px) {
-  .whyChooseUs .rightSection .blueBox {
-    position: absolute;
-    height: 270px;
-    top: 16%;
     width: 564px;
   }
 }
-@media (max-width: 696px) {
-  .whyChooseUs .rightSection .blueBox {
+@media (max-width: 776px) {
+  .whyChooseUs .container .rightSection .blueBox {
     position: absolute;
-    width: 412px;
-    height: 200px;
+    height: 270px;
     top: 16%;
+    width: 464px;
+  }
+}
+@media (max-width: 776px) {
+  .whyChooseUs .container .rightSection .blueBox {
+    display: none;
   }
 }
 
@@ -1170,7 +1200,7 @@ header .container .btn-login {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 85px;
 }
-@media (max-width: 992px) {
+@media (max-width: 1024px) {
   .testimonials .white-box .container .testimonials-stack {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto 1fr auto;
@@ -1421,7 +1451,9 @@ header .container .btn-login {
 .bottom-section1 {
   background-color: #0E1021;
   padding: 100px;
-  position: relative;
+  background-image: url(/IMG/Stripes/Rectangle\ 116.svg);
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 .bottom-section1 .container {
   display: flex;
@@ -1537,6 +1569,9 @@ header .container .btn-login {
 }
 
 .connect-header {
+  background-image: url(/IMG/Stripes/bg-connect.svg);
+  background-repeat: no-repeat;
+  background-position: bottom left;
   padding: 5px;
   background-color: #F0EFE9;
   position: relative;
@@ -1592,7 +1627,7 @@ header .container .btn-login {
   margin-top: 138px;
   margin-bottom: 80px;
   padding: 10px;
-  gap: 15px;
+  gap: 20px;
 }
 @media (max-width: 1126px) {
   .connect-options .container .connect-box {
@@ -1641,4 +1676,58 @@ header .container .btn-login {
   font-style: normal;
   color: rgba(25, 25, 25, 0.8);
   margin-bottom: 5px;
+}
+
+.contact-form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
+}
+.contact-form .container {
+  display: grid;
+  grid-template-rows: 1fr;
+  justify-items: center;
+  background-color: #F0EFE9;
+  padding: 50px 50px;
+  margin-bottom: 150px;
+}
+@media (max-width: 782px) {
+  .contact-form .container {
+    padding: auto;
+  }
+}
+.contact-form .container h3 {
+  font-family: "DM Sans";
+  font-size: 45px;
+  font-weight: bold;
+  line-height: 55px;
+  font-style: normal;
+  text-align: center;
+  color: #191919;
+  margin-bottom: 32px;
+}
+@media (max-width: 782px) {
+  .contact-form .container h3 {
+    font-size: 35px;
+  }
+}
+@media (max-width: 767px) {
+  .contact-form .container h3 {
+    padding: 0;
+  }
+}
+.contact-form .container form input, .contact-form .container form textarea {
+  width: 100%;
+  padding: 10px 20px;
+  margin-bottom: 10px;
+  border-radius: 20px;
+  border: none;
+}
+.contact-form .container .messageform {
+  resize: none;
+  height: 200px;
+}
+
+iframe {
+  display: block;
 }
