--- a/CSS/style.css
+++ b/CSS/style.css
@@ -232,7 +232,7 @@ html, body {
   font-weight: normal;
   width: 100%;
   margin-bottom: 50px;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 .btn-send-pg-2 i {
   margin-left: 5px;
@@ -1641,6 +1641,7 @@ header .container .btn-login {
   border: 1px solid #D4D4D4;
   width: 100%;
   height: 180px;
+  text-decoration: none;
 }
 .connect-options .container .connect-box .connect-itemstack .circle-black {
   background-color: black;
@@ -1677,6 +1678,15 @@ header .container .btn-login {
   color: rgba(25, 25, 25, 0.8);
   margin-bottom: 5px;
 }
+.connect-options .container .connect-box .connect-itemstack:hover {
+  background-color: #F9D783;
+}
+.connect-options .container .connect-box .connect-itemstack:hover .circle-black {
+  background-color: white;
+}
+.connect-options .container .connect-box .connect-itemstack:hover i {
+  color: #191919;
+}
 
 .contact-form {
   display: grid;
@@ -1700,11 +1710,11 @@ header .container .btn-login {
   font-family: "DM Sans";
   font-size: 45px;
   font-weight: bold;
-  line-height: 55px;
   font-style: normal;
   text-align: center;
   color: #191919;
   margin-bottom: 32px;
+  margin-top: 50px;
 }
 @media (max-width: 782px) {
   .contact-form .container h3 {
