--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -275,7 +275,7 @@ html, body{
     font-weight: normal;
     width: 100%;
     margin-bottom: 50px;
-    margin-top: 20px;
+    margin-top: 15px;
      
 
 
@@ -2434,6 +2434,8 @@ header{
                 border: 1px solid #D4D4D4;
                 width: 100%;
                 height: 180px;
+                text-decoration: none;
+
 
                 .circle-black{
                     
@@ -2455,6 +2457,8 @@ header{
                         color: white;
 
                     }
+
+                    
                 }
 
                 .stack-text{
@@ -2481,6 +2485,21 @@ header{
                         margin-bottom: 5px;
 
                     }
+                }
+
+                &:hover{
+                    background-color: #F9D783;
+
+                    .circle-black{
+                        background-color: white;
+                    }
+
+                    i{
+                        color: #191919;
+                        
+                    }
+                
+    
                 }
             }
                 
@@ -2511,11 +2530,11 @@ header{
             font-family: "DM Sans";
             font-size: 45px;
             font-weight: bold;
-            line-height: 55px;
             font-style: normal;
             text-align: center;
             color: #191919;
             margin-bottom: 32px;
+            margin-top: 50px;
 
             @media(max-width: 782px){
                 font-size: 35px;
