--- a/CSS/style.css
+++ b/CSS/style.css
@@ -455,7 +455,7 @@ header .container .btn-login {
   display: flex;
   align-items: start;
   padding-top: 80px;
-  padding-bottom: 80px;
+  padding-bottom: 70px;
   border: 2px solid RGBA(25, 25, 25, 0.2);
 }
 @media (max-width: 1200px) {
@@ -473,6 +473,7 @@ header .container .btn-login {
   flex-direction: column;
   align-items: start;
   max-width: 50%;
+  margin-bottom: 20px;
 }
 @media (max-width: 992px) {
   .company-features .container .features {
@@ -489,7 +490,7 @@ header .container .btn-login {
   font-weight: 500;
   font-style: normal;
   color: #f94d1c;
-  margin-bottom: 0px;
+  margin-bottom: 15px;
 }
 @media (max-width: 1200px) {
   .company-features .container .features {
@@ -502,6 +503,7 @@ header .container .btn-login {
   font-weight: bold;
   font-style: normal;
   color: #191919;
+  margin-bottom: 30px;
 }
 @media (max-width: 992px) {
   .company-features .container .features h3 {
@@ -520,11 +522,17 @@ header .container .btn-login {
   grid-template-columns: 1fr 1fr;
   padding-left: 10px;
 }
+@media (max-width: 1200px) {
+  .company-features .container .company-features-icons {
+    justify-items: center;
+  }
+}
 @media (max-width: 992px) {
   .company-features .container .company-features-icons {
     gap: 20px;
     margin: 10px;
     grid-template-columns: 2fr;
+    justify-items: start;
   }
 }
 @media (max-width: 1200px) {
@@ -534,9 +542,24 @@ header .container .btn-login {
     grid-template-rows: 1fr;
   }
 }
+.company-features .container .company-features-icons .iconStack {
+  width: auto;
+}
+@media (max-width: 1200px) {
+  .company-features .container .company-features-icons .iconStack {
+    width: 50%;
+  }
+}
+@media (max-width: 992px) {
+  .company-features .container .company-features-icons .iconStack {
+    width: auto;
+  }
+}
 .company-features .container .company-features-icons .iconStack i {
   width: 40px;
   height: 40px;
+  font-size: 25px;
+  margin-bottom: 15px;
 }
 @media (max-width: 992px) {
   .company-features .container .company-features-icons .iconStack i {
@@ -550,6 +573,7 @@ header .container .btn-login {
   font-weight: normal;
   font-style: normal;
   color: rgba(25, 25, 25, 0.7);
+  margin-bottom: 30px;
 }
 
 .aboutCompany .container {
