--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -577,7 +577,7 @@ header{
         display: flex;
         align-items: start;
         padding-top: 80px;
-        padding-bottom: 80px;
+        padding-bottom: 70px;
         border: 2px solid RGBA(25,25,25,0.2 ); 
 
         @media (max-width: 1200px){
@@ -596,6 +596,9 @@ header{
             flex-direction: column;
             align-items: start;
             max-width: 50%;
+            margin-bottom: 20px;
+
+    
 
             @media (max-width: 992px){
                 display: block;
@@ -609,8 +612,7 @@ header{
             
             
             
-        
-            
+    
 
             p{
                 font-family: "Inter";
@@ -618,12 +620,13 @@ header{
                 font-weight: 500;
                 font-style: normal;
                 color: #f94d1c;
-                margin-bottom: 0px;
+                margin-bottom: 15px;
 
             }
 
             @media (max-width: 1200px){
                 margin-top: 20px;
+                
             }
 
             h3{
@@ -632,6 +635,8 @@ header{
                 font-weight: bold;
                 font-style: normal;
                 color: #191919;
+                margin-bottom: 30px;
+            
                 
                 @media (max-width: 992px){
                     margin-bottom: 40px;
@@ -662,12 +667,18 @@ header{
             display: grid;
             grid-template-columns: 1fr 1fr;
             padding-left: 10px;
+
+            @media (max-width: 1200px){
+                justify-items: center;
+                            
+           }
             
             
             @media (max-width: 992px){
                  gap: 20px;
                  margin: 10px;
                  grid-template-columns: 2fr;
+                 justify-items: start;
                  
                              
             }
@@ -682,9 +693,25 @@ header{
             
 
             .iconStack{
+            width: auto;
+
+            @media (max-width: 1200px){
+                width: 50%;
+                            
+           }
+
+           @media (max-width: 992px){
+            width: auto;
+                        
+            }
+
+           
+
                 i{
                     width: 40px;
                     height: 40px;
+                    font-size: 25px;
+                    margin-bottom: 15px;
 
                     @media (max-width: 992px){
                         width: 100%;
@@ -701,6 +728,8 @@ header{
                     font-weight: normal;
                     font-style: normal;
                     color: rgba(25,25,25,0.7 );
+                    margin-bottom: 30px;
+
 
                 }
 
