--- a/CSS/style.css
+++ b/CSS/style.css
@@ -389,6 +389,11 @@ header .container .btn-login {
   font-weight: 700;
   font-size: 86px;
 }
+@media (max-width: 280px) {
+  .showcase .container .content h1 {
+    font-size: 50px;
+  }
+}
 @media (min-width: 768px) {
   .showcase .container .content h1 {
     font-size: 50px;
@@ -461,6 +466,13 @@ header .container .btn-login {
     gap: 50px;
   }
 }
+@media (max-width: 280px) {
+  .company-showcase .container .clients {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+}
 
 .company-features .container {
   display: flex;
@@ -493,6 +505,13 @@ header .container .btn-login {
     justify-items: center;
     padding: 0px;
     margin-bottom: 10px;
+  }
+}
+@media (max-width: 280px) {
+  .company-features .container .features {
+    display: block;
+    max-width: 100vh;
+    justify-items: center;
   }
 }
 .company-features .container .features p {
@@ -611,6 +630,12 @@ header .container .btn-login {
     width: 50%;
   }
 }
+@media (max-width: 280px) {
+  .aboutCompany .container .woman {
+    width: 200px;
+    margin-right: 0;
+  }
+}
 .aboutCompany .container .stripes-woman {
   position: absolute;
   width: 50%;
@@ -621,6 +646,11 @@ header .container .btn-login {
 @media (max-width: 1200px) {
   .aboutCompany .container .stripes-woman {
     left: 0;
+  }
+}
+@media (max-width: 280px) {
+  .aboutCompany .container .stripes-woman {
+    display: none;
   }
 }
 @media (max-width: 1200px) {
@@ -655,6 +685,11 @@ header .container .btn-login {
     position: relative;
     left: 0;
     margin-top: 20px;
+  }
+}
+@media (max-width: 280px) {
+  .aboutCompany .container .text-box-blue {
+    width: 200px;
   }
 }
 .aboutCompany .container .text-box-blue h4 {
@@ -1156,6 +1191,11 @@ header .container .btn-login {
     justify-items: center;
   }
 }
+@media (max-width: 992px) and (max-width: 280px) {
+  .meet-the-team .container .team-showcase {
+    grid-template-columns: 1fr;
+  }
+}
 .meet-the-team .container .team-showcase .employee-box {
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -1211,6 +1251,11 @@ header .container .btn-login {
 @media (max-width: 638px) {
   .testimonials .white-box {
     padding: 0;
+  }
+}
+@media (max-width: 992px) {
+  .testimonials .white-box {
+    max-width: 100vh;
   }
 }
 .testimonials .white-box .container .topTest {
@@ -1501,6 +1546,11 @@ header .container .btn-login {
   background-repeat: no-repeat;
   background-position: bottom right;
 }
+@media (max-width: 280px) {
+  .bottom-section1 {
+    padding: 20px;
+  }
+}
 .bottom-section1 .container {
   display: flex;
   justify-content: space-between;
@@ -1573,17 +1623,6 @@ header .container .btn-login {
   text-align: left;
   color: rgba(255, 255, 255, 0.7);
   margin-bottom: 20px;
-}
-.bottom-section1 .last-line-part {
-  position: absolute;
-  left: 67%;
-  top: 79%;
-  pointer-events: none;
-}
-@media (max-width: 992px) {
-  .bottom-section1 .last-line-part {
-    display: none;
-  }
 }
 
 .final-part {
