--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -479,6 +479,10 @@ header{
                 font-weight: 700;
                 font-size: 86px;
 
+                @media (max-width: 280px){
+                    font-size: 50px;
+                }
+
                 @media (min-width: 768px){
                     font-size: 50px;
                 }
@@ -574,6 +578,12 @@ header{
                  
             } 
 
+            @media (max-width: 280px){
+                display: grid;
+                grid-template-columns: 1fr;
+                justify-items: center;
+            }
+
             
             
                
@@ -625,6 +635,17 @@ header{
                 
  
             }
+
+            @media (max-width: 280px){
+                display: block;
+                max-width: 100vh;
+                justify-items: center;
+                
+                
+ 
+            }
+            
+            
             
             
             
@@ -783,6 +804,12 @@ header{
                 
                 
             } 
+
+            @media (max-width: 280px){
+                width: 200px;
+                margin-right: 0;
+ 
+            }
         }
 
         .stripes-woman{
@@ -798,18 +825,23 @@ header{
                 
             } 
 
+            @media (max-width: 280px){
+                display: none;
+ 
+            }
+
             img{
                 @media (max-width: 1200px){
                     width: 25%;
                     left: 0;
+
                     
-                    
+        
                 } 
+
+                
             }
-            
-            
-           
-            
+             
         }
 
         .text-box-blue{
@@ -824,11 +856,7 @@ header{
             @media (max-width: 1200px){
                 display: block;
                 top: 29%;
-                left: 30%;
-                
-
-                
-                
+                left: 30%;  
             }
             
             @media (max-width: 768px){
@@ -840,10 +868,14 @@ header{
                 position: relative;
                 left: 0;
                 margin-top: 20px;
-                
-                
-                 
             } 
+
+            @media (max-width: 280px){
+                width: 200px;
+ 
+            }
+
+            
 
             
 
@@ -854,9 +886,6 @@ header{
                 text-align: left;
                 margin-top: 27px;
                 margin-left: 18px;
-
-                
-
 
                 span{
                     font-size: 16px;
@@ -889,11 +918,7 @@ header{
                 color: #f94d1c;
                 
                 @media (max-width: 992px){
-                margin-top: 30px;    
-                    
-    
-                    
-                    
+                margin-top: 30px;       
                 }
 
             }
@@ -905,9 +930,6 @@ header{
                 font-style: normal;
                 color: #191919;
                 margin-bottom: 37px;
-
-                
-
             }
 
             p{
@@ -917,7 +939,6 @@ header{
                 font-style: normal;
                 color: rgba(25,25,25,0.7 );
                 padding-bottom: 30px;
-
             }
 
             .icon-pack{
@@ -1591,6 +1612,11 @@ header{
             grid-template-columns: 1fr 1fr;
             
             justify-items: center;
+
+            @media (max-width: 280px){
+                grid-template-columns: 1fr;
+ 
+            }
             
                          
         }
@@ -1602,6 +1628,8 @@ header{
             @media (max-width: 992px){
                 justify-items: center;
             }
+
+            
             
             
             
@@ -1664,6 +1692,12 @@ header{
 
     @media (max-width: 638px){
         padding: abs($number: 0);                        
+    }
+
+    @media (max-width: 992px){
+        max-width: 100vh;
+        
+
     }
     
     
@@ -2061,10 +2095,7 @@ header{
 
         .H3-part{
             @media (max-width: 992px){
-                text-align: center;
-                
-                
-                             
+                text-align: center;                 
             }
             
             
@@ -2158,7 +2189,14 @@ header{
     background-image: url(/IMG/Stripes/Rectangle\ 116.svg);
     background-repeat: no-repeat;
     background-position: bottom right;
+
+    @media (max-width: 280px){
+                
+        padding: 20px;
+
+    }
    
+    
     
     
     .container{
@@ -2167,19 +2205,12 @@ header{
         margin-top: 20px;
 
         @media (max-width: 1200px){
-            display: grid;
-            
-            
-              
+            display: grid;   
         }
 
+        
+        
 
-
- 
-        
-        
-        
-        
         .picture-text-div{
             width: 35%;
             margin-right: 10%;
@@ -2192,7 +2223,6 @@ header{
             }
 
             
-
             img{
                 margin-bottom: 28px;
                 
@@ -2234,6 +2264,8 @@ header{
                 
                   
             }
+
+            
 
             
             
@@ -2291,17 +2323,6 @@ header{
 
     }
 
-    .last-line-part{
-        position: absolute;
-        left: 67%;
-        top: 79%;
-        pointer-events: none;
-
-        @media (max-width: 992px){
-            display: none;
-                         
-        }
-    }
     
 }
 
@@ -2451,6 +2472,7 @@ header{
                 display: grid;
                 grid-template-columns: 1fr;
             }
+
 
             .connect-itemstack{
                 display: flex;
@@ -2604,5 +2626,3 @@ header{
 iframe{
     display: block;
 }
-
-
