--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -375,6 +375,8 @@ header{
                 font-size: 15;
                 font-weight: 300;
 
+                
+
                 i{
                     margin-right: 5px;
                     font-size: 1.2em;
@@ -537,6 +539,12 @@ header{
     img{
         margin-right: -50px;
 
+        @media (max-width: 820px){
+            width: 50%;
+            height: 10%;
+        
+        }
+
         @media (max-width: 768px){
             display: none;
         }
@@ -578,7 +586,7 @@ header{
                  
             } 
 
-            @media (max-width: 280px){
+            @media (max-width: 360px){
                 display: grid;
                 grid-template-columns: 1fr;
                 justify-items: center;
@@ -790,6 +798,7 @@ header{
             
             
             
+            
         } 
 
         .woman{
@@ -801,6 +810,7 @@ header{
             @media (max-width: 1200px){
                 margin-left: 0;
                 width: 50%;
+                
                 
                 
             } 
@@ -1753,7 +1763,7 @@ header{
                                 
             }
 
-            @media (max-width: 638px){
+            @media (max-width: 915px){
                 grid-template-columns: 1fr;
                 grid-template-rows: auto 1fr auto;
                 gap: 30px;
@@ -2264,16 +2274,6 @@ header{
                 
                   
             }
-
-            
-
-            
-            
-
-            
-            
-            
-            
 
                 .divStack{
                     display: flex;
